comments and spotlessa apply