@@ -27,13 +27,22 @@ import java.util.stream.Collectors;
 import static de.monticore.cd.codegen.CD2JavaTemplates.EMPTY_BODY;
 
 /**
- * When visit(node) we add the visitedElements into a set and remove them after the endVisit again
- * to account
- * for circular relations which would otherwise not terminate.
+ * This decorator generates a visitor interface for each class and interface in the class diagram.
+ * The visitor interface contains methods to visit, endVisit, handle, traverse,
+ * All classes and interfaces contain an accept method that accepts the visitor interface as a
+ * parameter.
+ * <p>
+ * The visitor interface is used to traverse over classes in the class diagram.
+ * When a class inherits from another class or implements an interface, these relations are visited
+ * before the
+ * class itself is visited. This is done in a deep-first manner.
+ * The endVisit method is called after all super classes and interfaces as well as the node have
+ * been visited and handled.
+ * The endVisit methods are then called in reverse order of the visit methods.
  */
 public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecorator.NoData>
     implements CDBasisVisitor2, CDInterfaceAndEnumVisitor2 {
-
+  
   Stack<ASTCDParameter> parameterOfPojo = new Stack<>();
   Stack<ASTCDClass> currentDecoratedClass = new Stack<>();
   Stack<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> currentDecoratedInterface =
@@ -46,7 +55,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
    */
   List<String> classesFromClassdiagramAsString = new ArrayList<>();
   boolean isInitialized = false;
-
+  
   @Override
   @SuppressWarnings("rawtypes")
   public Iterable<Class<? extends IDecorator>> getMustRunAfter() {
@@ -55,13 +64,13 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
     return Iterables.concat(super.getMustRunAfter(), Collections.singletonList(
         SetterDecorator.class));
   }
-
+  
   @Override
   public void visit(ASTCDCompilationUnit compilationUnit) {
     init(compilationUnit, compilationUnit.getCDDefinition(), "I" + compilationUnit.getCDDefinition()
         .getName() + "InheritanceVisitor");
   }
-
+  
   public void init(ASTCDCompilationUnit compilationUnit, ASTCDDefinition definition,
       String visitorInterfaceName) {
     if (!isInitialized) {
@@ -69,11 +78,11 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       //create the visitor interface
       visitorInterface = CD4CodeMill.cDInterfaceBuilder().setName(visitorInterfaceName).setModifier(
           CD4CodeMill.modifierBuilder().PUBLIC().build()).build();
-
+      
       // add the visitor interface to the definition
       ASTCDDefinition decoratedDefinition = this.decoratorData.getAsDecorated(definition);
       decoratedDefinition.addCDElement(visitorInterface);
-
+      
       // create the visitor interface parameter
       String packageName = definition.getSymbol().getPackageName();
       String visitorInterfaceQualifiedName = packageName.isEmpty() ? visitorInterfaceName
@@ -82,14 +91,14 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
           .createQualifiedType(visitorInterfaceQualifiedName);
       visitorInterfaceParameter = CD4CodeMill.cDParameterBuilder().setName("visitor").setMCType(
           visitorInterfaceQualifiedType).build();
-
+      
       // add getTraversedElements Set<Object> method to the visitor interface
       ASTMCSetType setType = MCTypeFacade.getInstance().createSetTypeOf("Object");
       ASTMCReturnType returnType = CD4CodeMill.mCReturnTypeBuilder().setMCType(setType).build();
       ASTCDMethod getTraversedElementsMethod = CDMethodFacade.getInstance().createMethod(CD4CodeMill
           .modifierBuilder().setAbstract(true).build(), returnType, "getTraversedElements");
       visitorInterface.addCDMember(getTraversedElementsMethod);
-
+      
       // add addTraversedElement method to the visitor interface
       ASTMCReturnType returnTypeAddTraversedElement = CD4CodeMill.mCReturnTypeBuilder()
           .setMCVoidType(CD4CodeMill.mCVoidTypeBuilder().build()).build();
@@ -101,7 +110,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       visitorInterface.addCDMember(addTraversedElementMethod);
       glexOpt.ifPresent(glex -> glex.replaceTemplate(EMPTY_BODY, addTraversedElementMethod,
           new TemplateHookPoint("methods.visitor.addTraversedElement")));
-
+      
       // add removeTraversedElement method to the visitor interface
       ASTMCReturnType returnTypeRemoveTraversedElement = CD4CodeMill.mCReturnTypeBuilder()
           .setMCVoidType(CD4CodeMill.mCVoidTypeBuilder().build()).build();
@@ -113,14 +122,14 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       visitorInterface.addCDMember(removeTraversedElement);
       glexOpt.ifPresent(glex -> glex.replaceTemplate(EMPTY_BODY, removeTraversedElement,
           new TemplateHookPoint("methods.visitor.removeTraversedElement")));
-
+      
       //visitor to get all classes from the original class diagram classes
       CD4CodeTraverser t2 = CD4CodeMill.inheritanceTraverser();
       CDTypeCollector cdTypeCollector = new CDTypeCollector();
       t2.add4CDBasis(cdTypeCollector);
       t2.add4CDInterfaceAndEnum(cdTypeCollector);
       compilationUnit.accept(t2);
-
+      
       classesFromClassdiagramAsString.addAll(cdTypeCollector.getClasses().stream().map(e -> e
           .getSymbol().getFullName()).collect(Collectors.toList()));
       classesFromClassdiagramAsString.addAll(cdTypeCollector.getInterfaces().stream().map(e -> e
@@ -129,15 +138,15 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
           .getSymbol().getFullName()).collect(Collectors.toList()));
     }
   }
-
+  
   @Override
   public void visit(ASTCDClass clazz) {
     if (decoratorData.shouldDecorate(this.getClass(), clazz)) {
       ASTCDClass decClazz = decoratorData.getAsDecorated(clazz);
       currentDecoratedClass.add(decClazz);
-
+      
       String packageName = clazz.getSymbol().getPackageName();
-
+      
       String visitorInterfaceName = packageName.isEmpty() ? "I" + clazz.getName() + "Visitor"
           : packageName + ".I" + clazz.getName() + "Visitor";
       String pojoClassName = packageName.isEmpty() ? clazz.getName() : packageName + "." + clazz
@@ -151,7 +160,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       ASTCDParameter pojoInterfaceClassParameter = CD4CodeMill.cDParameterBuilder().setName("node")
           .setMCType(visitorInterfaceQualifiedType).build();
       parameterOfPojo.add(pojoClassParameter);
-
+      
       //create the methods for the visitor interface
       //visit:
       ASTCDMethod visitMethodHeader = CDMethodFacade.getInstance().createMethod(CD4CodeMill
@@ -171,7 +180,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
           new TemplateHookPoint("methods.visitor.inheritanceHandle",
               upperInterfacesAndSuperClasses)));
       visitorInterface.addCDMember(handleMethodHeader);
-
+      
       // traverse:
       ASTCDMethod traverseMethodHeader = CDMethodFacade.getInstance().createMethod(CD4CodeMill
           .modifierBuilder().PUBLIC().build(), "traverse", parameterOfPojo.peek());
@@ -179,18 +188,18 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       currentTraverseMethod.add(traverseMethodHeader);
       glexOpt.ifPresent(glex -> glex.replaceTemplate(EMPTY_BODY, traverseMethodHeader,
           new TemplateHookPoint("methods.visitor.traverse", classesFromClassdiagramAsString)));
-
+      
       // add accept method to pojo class
       ASTCDMethod acceptMethod = CDMethodFacade.getInstance().createDefaultMethod(CD4CodeMill
           .modifierBuilder().PUBLIC().build(), "accept", visitorInterfaceParameter);
       decClazz.addCDMember(acceptMethod);
-
+      
       String errorCode = "0x01472";
       glexOpt.ifPresent(glex -> glex.replaceTemplate(EMPTY_BODY, acceptMethod,
           new TemplateHookPoint("methods.visitor.accept", clazz, errorCode)));
     }
   }
-
+  
   @Override
   public void visit(de.monticore.cdinterfaceandenum._ast.ASTCDInterface node) {
     if (decoratorData.shouldDecorate(this.getClass(), node)) {
@@ -211,7 +220,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
           .getAsDecorated(node);
       currentDecoratedInterface.add(decInterface);
       parameterOfPojo.add(pojoInterfaceParameter);
-
+      
       //create the methods for the visitor interface
       //visit:
       ASTCDMethod visitMethodHeader = CDMethodFacade.getInstance().createMethod(CD4CodeMill
@@ -231,7 +240,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
           new TemplateHookPoint("methods.visitor.inheritanceHandle",
               upperInterfacesAndSuperClasses)));
       visitorInterface.addCDMember(handleMethodHeader);
-
+      
       // traverse:
       ASTCDMethod traverseMethodHeader = CDMethodFacade.getInstance().createMethod(CD4CodeMill
           .modifierBuilder().PUBLIC().build(), "traverse", parameterOfPojo.peek());
@@ -239,18 +248,18 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       currentTraverseMethod.add(traverseMethodHeader);
       glexOpt.ifPresent(glex -> glex.replaceTemplate(EMPTY_BODY, traverseMethodHeader,
           new TemplateHookPoint("methods.visitor.traverse", classesFromClassdiagramAsString)));
-
+      
       // add accept method to pojo class
       ASTCDMethod acceptMethod = CDMethodFacade.getInstance().createDefaultMethod(CD4CodeMill
           .modifierBuilder().PUBLIC().build(), "accept", visitorInterfaceParameter);
       decInterface.addCDMember(acceptMethod);
-
+      
       String errorCode = "0x01472";
       glexOpt.ifPresent(glex -> glex.replaceTemplate(EMPTY_BODY, acceptMethod,
           new TemplateHookPoint("methods.visitor.accept", node, errorCode)));
     }
   }
-
+  
   @Override
   public void endVisit(ASTCDClass clazz) {
     if (decoratorData.shouldDecorate(this.getClass(), clazz)) {
@@ -259,7 +268,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       currentTraverseMethod.pop();
     }
   }
-
+  
   @Override
   public void endVisit(de.monticore.cdinterfaceandenum._ast.ASTCDInterface node) {
     if (decoratorData.shouldDecorate(this.getClass(), node)) {
@@ -268,7 +277,7 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       currentTraverseMethod.pop();
     }
   }
-
+  
   @Override
   public void visit(ASTCDAttribute attribute) {
     if (!decoratorData.shouldDecorate(this.getClass(), attribute)) {
@@ -289,12 +298,12 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
       attributeName = "node.get" + attribute.getName().substring(0, 1).toUpperCase() + attribute
           .getName().substring(1) + "()";
     }
-
+    
     glexOpt.ifPresent(glex -> glex.addAfterTemplate("methods.visitor.traverse:Inner",
         currentTraverseMethod.peek(), new TemplateHookPoint("methods.visitor.traverseInner",
             classesFromClassdiagramAsString, attribute.getMCType(), attributeName)));
   }
-
+  
   /**
    * This method resolves the super classes and interfaces of a class and returns all in a somewhat
    * expected order
@@ -328,9 +337,10 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
               nextRoundVisited.add(resultOfTransitiveClass.get());
             }
           }
-
+          
           //interfaces
-          List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> resultOfTransitiveInterface = getASTCDInterfaces((ASTCDClass) currentNode, visitedInterfaces);
+          List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> resultOfTransitiveInterface =
+              getASTCDInterfaces((ASTCDClass) currentNode, visitedInterfaces);
           for (de.monticore.cdinterfaceandenum._ast.ASTCDInterface resultOfTransitiveInterfaceElement : resultOfTransitiveInterface) {
             allVisited.add(resultOfTransitiveInterfaceElement);
             result.add(resultOfTransitiveInterfaceElement.getSymbol().getFullName());
@@ -339,7 +349,8 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
         }
         else if (currentNode instanceof ASTCDInterface) {
           //interfaces
-          List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> resultOfTransitiveInterface = getASTCDInterfaces((ASTCDInterface) currentNode, visitedInterfaces);
+          List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> resultOfTransitiveInterface =
+              getASTCDInterfaces((ASTCDInterface) currentNode, visitedInterfaces);
           for (de.monticore.cdinterfaceandenum._ast.ASTCDInterface resultOfTransitiveInterfaceElement : resultOfTransitiveInterface) {
             allVisited.add(resultOfTransitiveInterfaceElement);
             result.add(resultOfTransitiveInterfaceElement.getSymbol().getFullName());
@@ -353,16 +364,16 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
     }
     return result;
   }
-
-  private static List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> getASTCDInterfaces(ASTCDType currentNode, Set<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> visitedInterfaces) {
+  
+  private static List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> getASTCDInterfaces(
+      ASTCDType currentNode,
+      Set<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> visitedInterfaces) {
     //direct interfaces
     List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> resultOfTransitiveInterface =
-        (new ArrayList<>(CDSymbolTables.getTransitiveSuperInterfaces(
-          currentNode)));
+        (new ArrayList<>(CDSymbolTables.getTransitiveSuperInterfaces(currentNode)));
     //filter out all interfaces that do not match the direct interface list of the class
-    List<String> directInterfaces = currentNode.getInterfaceList().stream()
-        .map(m -> ((ASTMCQualifiedType) m).getMCQualifiedName().getQName()).collect(Collectors
-            .toList());
+    List<String> directInterfaces = currentNode.getInterfaceList().stream().map(
+        m -> ((ASTMCQualifiedType) m).getMCQualifiedName().getQName()).collect(Collectors.toList());
     List<de.monticore.cdinterfaceandenum._ast.ASTCDInterface> helper = new ArrayList<>();
     for (de.monticore.cdinterfaceandenum._ast.ASTCDInterface directInterface : resultOfTransitiveInterface) {
       for (String directName : directInterfaces) {
@@ -378,11 +389,11 @@ public class InheritanceVisitorDecorator extends AbstractDecorator<AbstractDecor
     visitedInterfaces.addAll(resultOfTransitiveInterface);
     return resultOfTransitiveInterface;
   }
-
+  
   @Override
   public void addToTraverser(CD4CodeTraverser traverser) {
     traverser.add4CDBasis(this);
     traverser.add4CDInterfaceAndEnum(this);
   }
-
+  
 }
